# 2025-II-SO-Auto

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
