[project]
name = "2025-ii-so-auto"
version = "0.1.0"
description = "Automated Operating System Tasks"
authors = [
    {name = "alizarazot",email = "alizarazot@ufpso.edu.co"}
]
license = {text = "UNLICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil (>=7.1.3,<8.0.0)",
    "pyside6 (>=6.10.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "2025_ii_so_auto", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
