[project]
name = "2025-ii-so-auto"
version = "0.1.0"
description = "Automated Operating System Tasks"
authors = [
    {name = "alizarazot",email = "alizarazot@ufpso.edu.co"}
]
license = {text = "UNLICENSE"}
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "psutil (>=7.1.3,<8.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "pyinstaller (>=6.17.0,<7.0.0)"
]
